# makor-inteligence-

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  enums.py  logging.py
app/db/: base.py  session.py
app/ingestion/: __init__.py  base.py  mock_health.py  registry.py
app/ingestion/adapters/: bloomberg.py  cb_speeches.py  excel_vol_sheet.py  forexlive.py  fred.py  outlook.py  reuters.py  synthesis.py  tradingeconomics.py  yahoo_finance.py
app/models/: __init__.py  briefing.py  ingestion.py
app/repositories/: briefing_repository.py
app/schemas/: __init__.py  briefing.py  intelligence.py
app/services/: briefing_generator.py  briefing_service.py  morning_workflow.py
frontend/: DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  postcss.config.js  preview.html  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: design-tokens.ts
frontend/src/pages/: ArchivePage.tsx  BriefingDetailPage.tsx  DashboardPage.tsx  (+1 more)
frontend/wireframes/: archive.html  briefing-detail.html
web/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: actions.ts  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/lib/: share.ts  utils.ts
web/styles/: components.css  tokens.css
(+127 files in other folders)
