[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makor-intelligence-platform"
version = "0.1.0"
description = "Institutional FX & Macro intelligence platform — Morning Briefing engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Makor Securities Intelligence Desk" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "SQLAlchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "anthropic>=0.39",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "orjson>=3.10",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
